<resources>
    <string name="app_name">Group Project</string>
    <string name="std1">std1</string>
    <string name="std2">std2</string>
    <string name="std3">std3</string>
    <string name="password"> Enter Password</string>
    <string name="enter_email"> Enter Email</string>
    <string name="login">Login</string>
    <string name="forget_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="ContactUs">Contact Us</string>
    <string name="submit">Send</string>
</resources>